--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="tgx5XOWqy0chzmAIJV4Lbrkp6kWSRAPK7voaClfmDYQ" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QRForge - Free Unlimited QR Code Generator | Create Professional QR Codes</title>
