--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5257313631549502"
+     crossorigin="anonymous"></script>
     <meta name="google-site-verification" content="tgx5XOWqy0chzmAIJV4Lbrkp6kWSRAPK7voaClfmDYQ" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
