--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <!-- Critical SEO Meta Tags -->
+    <meta name="pushsdk" content="108ef7535f9a28ac95a7f756304e4dca">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free QR Code Generator Online - Create Custom QR Codes Instantly | Qrenzo</title>
